# libvodozemac

./: .gitignore  Cargo.toml  LICENSE  REUSE.toml  build-osx.sh  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml
js/: .gitignore  package-lock.json  package.json  rollup.config.js
js/src/: index.mjs
macros/: .gitignore  Cargo.toml
macros/src/: lib.rs
src/: keys.rs  lib.rs  macros.rs  slices.rs  wasm.rs
src/megolm/: exported_session_key.rs  group_session.rs  inbound_group_session.rs  message.rs  mod.rs  session_config.rs  session_key.rs
src/olm/: account.rs  message.rs  mod.rs  session.rs  session_config.rs  session_keys.rs
src/sas/: established_sas.rs  mac.rs  mod.rs  sas.rs  sas_bytes.rs
