# SPDX-FileCopyrightText: 2025 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

